fix: localhost 08081 swagger now can be acces and use but it cant work properly
